--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-alpha04"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,7 +29,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-
     }
 }
 
